teleportation on a case and inside a building is ok

--- a/aframe/index.html
+++ b/aframe/index.html
@@ -314,17 +314,17 @@
         <a-entity id="player" position="-40 1.6 -50">
             <a-camera id="camera" universal-controls kinematic-body userHeight="1.6">
                 <a-cursor visible="false" raycaster="objects: .building, .floor-tile"></a-cursor>
+                <a-entity id="left"
+                          hand-controls="left"
+                          rotation="-90 0 0"
+                          raycaster="objects: .building .floor-tile"
+                          super-hands laser-controls cursor></a-entity>
+                <a-entity id="right"
+                          hand-controls="right"
+                          rotation="90 0 0"
+                          raycaster="objects: .building .floor-tile"
+                          super-hands laser-controls cursor></a-entity>
             </a-camera>
-            <a-entity id="left"
-                      hand-controls="left"
-                      rotation="-90 0 0"
-                      raycaster="objects: .building .floor-tile"
-                      super-hands laser-controls></a-entity>
-            <a-entity id="right"
-                      hand-controls="right"
-                      rotation="90 0 0"
-                      raycaster="objects: .building .floor-tile"
-                      super-hands laser-controls></a-entity>
         </a-entity>
     </a-scene>
 </body>
