--- a/aframe/index.html
+++ b/aframe/index.html
@@ -7,6 +7,7 @@
     <script src="https://unpkg.com/aframe-physics-system@1.4.0/dist/aframe-physics-system.js"></script>
     <script src="https://unpkg.com/super-hands@2.0.2/dist/super-hands.min.js"></script>
     <script src="https://unpkg.com/aframe-aabb-collider-component@3.1.0/dist/aframe-aabb-collider-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-controller-cursor-component@0.2.7/dist/aframe-controller-cursor-component.min.js"></script>
 
     <script>
 	    AFRAME.registerComponent('virtual-teleportation', {
@@ -314,17 +315,17 @@
         <a-entity id="player" position="-40 1.6 -50">
             <a-camera id="camera" universal-controls kinematic-body userHeight="1.6">
                 <a-cursor visible="false" raycaster="objects: .building, .floor-tile"></a-cursor>
-                <a-entity id="left"
-                          hand-controls="left"
-                          rotation="-90 0 0"
-                          raycaster="objects: .building .floor-tile"
-                          super-hands laser-controls cursor></a-entity>
-                <a-entity id="right"
-                          hand-controls="right"
-                          rotation="90 0 0"
-                          raycaster="objects: .building .floor-tile"
-                          super-hands laser-controls cursor></a-entity>
             </a-camera>
+            <a-entity id="left"
+                      hand-controls="left"
+                      rotation="-90 0 0"
+                      raycaster="objects: .building .floor-tile"
+                      super-hands laser-controls controller-cursor></a-entity>
+            <a-entity id="right"
+                      hand-controls="right"
+                      rotation="90 0 0"
+                      raycaster="objects: .building .floor-tile"
+                      super-hands laser-controls controller-cursor downEvents="gripdown" upEvents="gripup"></a-entity>
         </a-entity>
     </a-scene>
 </body>
