teleportation on a case and inside a building is ok

--- a/aframe/index.html
+++ b/aframe/index.html
@@ -320,12 +320,12 @@
                       hand-controls="left"
                       rotation="-90 0 0"
                       raycaster="objects: .building .floor-tile"
-                      super-hands laser-controls></a-entity>
+                      super-hands laser-controls controller-cursor downEvents="gripdown" upEvents="gripup"></a-entity>
             <a-entity id="right"
                       hand-controls="right"
                       rotation="90 0 0"
                       raycaster="objects: .building .floor-tile"
-                      super-hands laser-controls></a-entity>
+                      super-hands laser-controls controller-cursor downEvents="gripdown" upEvents="gripup"></a-entity>
         </a-entity>
     </a-scene>
 </body>
