--- a/aframe/index.html
+++ b/aframe/index.html
@@ -313,19 +313,20 @@
         <a-sky color="skyblue"></a-sky>
 
         <a-entity id="player" position="-40 1.6 -50">
-            <a-camera id="camera" universal-controls kinematic-body userHeight="1.6">
-                <a-cursor visible="false" raycaster="objects: .building, .floor-tile"></a-cursor>
+            <a-camera id="camera" universal-controls kinematic-body mouse-cursor userHeight="1.6">
+                <a-cursor visible="false"
+                          raycaster="objects: .building, .floor-tile"></a-cursor>
             </a-camera>
             <a-entity id="left"
                       hand-controls="left"
                       rotation="-90 0 0"
-                      raycaster="objects: .building .floor-tile"
-                      super-hands laser-controls controller-cursor></a-entity>
+                      raycaster="objects: .building, .floor-tile"
+                      super-hands laser-controls cursor></a-entity>
             <a-entity id="right"
                       hand-controls="right"
                       rotation="90 0 0"
-                      raycaster="objects: .building .floor-tile"
-                      super-hands laser-controls controller-cursor></a-entity>
+                      raycaster="objects: .building, .floor-tile"
+                      super-hands laser-controls cursor></a-entity>
         </a-entity>
     </a-scene>
 </body>
